# brr

./: .pre-commit-config.yaml  README.md  install.md  pyproject.toml
.dvc/: config
docs/: axidraw.md
libraries/geodude/: README.md  pyproject.toml  scratch.ipynb
libraries/geodude/geodude/: __init__.py  deform.py  fonts.py  intersection.py  line.py  ops.py  parameter.py  subdivide.py  utils.py
libraries/geodude/notebooks/: function_scratch.ipynb  intersections_demo.ipynb
libraries/geodude/tests/: test_deform.py  test_intersection.py  test_ops.py  test_parameter.py  test_skeleton.py  test_utils.py
outputs/: 20230321-181543_327452-6f2df-f6be24_gpt4_harmonious_duality.svg.dvc  20230323-110746-0d2f2-a3c-intersection_glitch.svg.dvc  20230323-111131-0d2f2-4f7-intersection_glitch.svg.dvc  20230323-111330-0d2f2-f74-intersection_glitch.svg.dvc  20230323-124852-073e4-c66-intersection_glitch.svg.dvc  20230323-125327-073e4-6ce-intersection_glitch.svg.dvc  20230330-173522-3b324-d41-intersection_working.svg.dvc  20230331-122056-cd7fb-d9b-intersection_working.svg.dvc  20230331-123223-cd7fb-92d-intersection_working.svg.dvc  20230331-170417-8294f-b63-ringlock.svg.dvc  20230331-170639-8294f-62c-ringlock.svg.dvc  20230331-182047-66fdd-2cf-gap_in_the_tangle.svg.dvc  20230331-183442-fbe09-818-gap_in_the_tangle.svg.dvc  20230331-183555-fbe09-517-gap_in_the_tangle.svg.dvc  20230331-183830-fbe09-d73-gap_in_the_tangle.svg.dvc  20230331-184056-fbe09-853-gap_in_the_tangle.svg.dvc  20230331-200435-4c203-e7f-negative_space_intersections.svg.dvc  20230331-200851-4c203-962-negative_space_intersections.svg.dvc  20230331-201540-4c203-6c0-negative_space_intersections.svg.dvc  20230331-212248-4c203-cde-negative_space_intersections.svg.dvc  20230331-234717-4c203-109-tangled_circles.svg.dvc  20230331-235341-4c203-0b2-tangled_circles.svg.dvc  20230331-235503-4c203-f48-tangled_circles.svg.dvc  20230331-235849-4c203-002-tangled_circles.svg.dvc  20230331-235912-4c203-0ce-tangled_circles.svg.dvc  20230401-000058-4c203-fb4-tangled_circles.svg.dvc  20230401-000127-4c203-5f6-tangled_circles.svg.dvc  20230401-012157-4c203-70b-tangled_circles_no_fill.svg.dvc  20230401-012446-4c203-e3f-tangled_circles_no_fill.svg.dvc  20230401-115034-28023-8ea-weave.svg.dvc  20230401-115416-28023-4dd-weave_accident.svg.dvc  20230401-115754-28023-80b-weave.svg.dvc  20230401-122502-28023-efd-filled_weave.svg.dvc  20230403-162254-f8df8-9c7-weave.svg.dvc  20230403-180146-9df11-921-circles_and_subdivides.svg.dvc  20230403-184224-9df11-935-circles_and_subdivides_filled.svg.dvc  20230404-104032-78f8a-bc4-circles_and_subdivides.svg.dvc  20230404-111024-79cb6-f66-circles_and_subdivides_filled.svg.dvc  20230404-115724-b897f-4c7-circles_and_subdivides_filled.svg.dvc  20230404-233101-59305-09e-circles_and_subdivides_filled.svg.dvc  (+47 more)
projects/dashing/: pyproject.toml
projects/dashing/dashing/: 20230307_prototype.ipynb  20230316_gpt4.ipynb  20230322_intersections.ipynb  20230331_intersection_dashing.ipynb  20230401_weave.ipynb  20230403_cross_composition.ipynb  20230404_composition_fill.ipynb  20230411_intersection_mania.ipynb  20230430_gpt4.ipynb  20230505_sinusoidal_render_scratch.ipynb  20230615_composition_weave.ipynb  20240102_dynamical_sys.ipynb
projects/dashing/dashing/outputs/: 20230307_dashed_prototype.svg.dvc  20230307_dashed_prototype2.svg.dvc  20230316_gpt4_01_harmonious_duality.svg.dvc  20230316_gpt4_02_harmonious_duality.svg.dvc
projects/dashing/notes/: 2023-03-16T20_25_54.301Z • Flexible configuration for generative art..md
projects/old_genpen/: pyproject.toml
projects/old_genpen/notebooks/notebooks/: camera_test.ipynb  get_video.ipynb  load_merge.ipynb  raster_hatch.ipynb  stop_motion.ipynb
(+30 files in other folders)
