[tool.poetry]
name = "poetry-monorepo-template"
version = "0.1.0"
description = ""
authors = ["anaka <alex.naka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
ruff = "^0.0.254"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 150 # let black handle it
