[tool.poetry]
name = "dashing"
version = "0.1.0"
description = ""
authors = ["Naka <alex.naka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
geodude = {path = "../../libraries/geodude"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
