[tool.poetry]
name = "dashing"
version = "0.1.0"
description = ""
authors = ["Naka <alex.naka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
geodude = {path = "../../libraries/geodude", develop = true}
fn = {path = "../../libraries/fn", develop = true}


[tool.poetry.group.dev.dependencies]
debugpy = "1.6.2"
ipykernel = "^6.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
